ai generated description (but wrong desc)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,16 @@ server.port=8080
 
 # CORS Configuration
 cors.allowed.origins=http://localhost:3000
+
+# AI Configuration
+# Choose AI provider: "openai" or "vertexai"
+ai.provider=openai
+
+# OpenAI Configuration (if using OpenAI)
+# Get your API key from: https://platform.openai.com/api-keys
+openai.api.key=your_openai_api_key_here
+
+# Vertex AI Configuration (if using Google Vertex AI)
+# Get your project ID from: https://console.cloud.google.com/
+vertexai.project.id=your_vertex_project_id_here
+vertexai.location=us-central1
