--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 spring.application.name=fixpoint
 
-# H2 Database Configuration for Development
-spring.datasource.url=jdbc:h2:mem:testdb
+# H2 Database Configuration for Development - File-based for persistence
+spring.datasource.url=jdbc:h2:file:./data/fixpoint;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
