Enhanced AI Features + Security Implementation
 Features:
- Multi-AI provider support (Gemini, OpenAI, enhanced fallback)
- Category-specific AI image analysis for civic reports
- Automatic priority assessment based on AI analysis
- Enhanced JSON serialization with proper LocalDateTime support
- Fixed circular reference issues in entity relationships

 Security:
- Secure environment variable loading (.env support)
- Removed hardcoded API keys from codebase
- Added .gitignore rules for sensitive files
- Environment variable placeholders for all secrets

 Technical:
- JacksonConfig for proper JSON handling
- DotEnvApplicationContextInitializer for .env loading
- Enhanced fallback descriptions for offline use
- Comprehensive error handling and API provider fallback

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,16 @@ build/
 .vscode/
 node_modules
 node_modules/
+
+### Environment Variables & Secrets ###
+.env
+.env.local
+.env.development
+.env.production
+*.properties.local
+secrets/
+*.key
+*.pem
+
+### API Keys and Sensitive Files ###
+application-secrets.properties
