--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,14 +28,18 @@ server.port=8080
 cors.allowed.origins=http://localhost:3000
 
 # AI Configuration
-# Choose AI provider: "openai" or "vertexai"
-ai.provider=openai
+# Choose AI provider: "gemini", "openai", or "fallback"
+ai.provider=gemini
 
-# OpenAI Configuration (if using OpenAI)
+# Google Gemini Configuration (Recommended - Free tier available)
+# Get your API key from: https://makersuite.google.com/app/apikey
+gemini.api.key=${GEMINI_API_KEY:}
+
+# OpenAI Configuration (Backup)
 # Get your API key from: https://platform.openai.com/api-keys
-openai.api.key=your_openai_api_key_here
+openai.api.key=${OPENAI_API_KEY:}
 
 # Vertex AI Configuration (if using Google Vertex AI)
 # Get your project ID from: https://console.cloud.google.com/
-vertexai.project.id=your_vertex_project_id_here
-vertexai.location=us-central1
+vertexai.project.id=${VERTEX_PROJECT_ID:your_vertex_project_id_here}
+vertexai.location=${VERTEX_LOCATION:us-central1}
