--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ ai.provider=gemini
 
 # Google Gemini Configuration (Recommended - Free tier available)
 # Get your API key from: https://makersuite.google.com/app/apikey
-gemini.api.key=${GEMINI_API_KEY:}
+gemini.api.key=AIzaSyABtkHI4NlJm-PB_j_7WhX7Ho46IcK4sn8
 
 # OpenAI Configuration (Backup)
 # Get your API key from: https://platform.openai.com/api-keys
