--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,13 @@
     <artifactId>commons-io</artifactId>
     <version>1.3.2</version>
 </dependency>
+
+<!-- PDF Generation -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itextpdf</artifactId>
+    <version>5.5.13.3</version>
+</dependency>
 	</dependencies>
 
 	<build>
