--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,8 @@ openai.api.key=${OPENAI_API_KEY:}
 # Get your project ID from: https://console.cloud.google.com/
 vertexai.project.id=${VERTEX_PROJECT_ID:your_vertex_project_id_here}
 vertexai.location=${VERTEX_LOCATION:us-central1}
+
+# Google Cloud Speech-to-Text Configuration
+google.cloud.project-id=your-google-cloud-project-id
+google.cloud.speech.enabled=false
+google.cloud.speech.credentials-file=classpath:google-credentials.json
