duplicate fixed,otp ongoing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 spring.application.name=fixpoint
 
+# H2 Database C# Email Configuration for OTP Verification
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME:tahseennabiha35@gmail.com}
+spring.mail.password=${EMAIL_PASSWORD:zsgyzrornyervilu}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.debug=true
+
 # H2 Database Configuration for Development - File-based for persistence
 spring.datasource.url=jdbc:h2:file:./data/fixpoint;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
@@ -33,7 +44,7 @@ ai.provider=gemini
 
 # Google Gemini Configuration (Recommended - Free tier available)
 # Get your API key from: https://makersuite.google.com/app/apikey
-gemini.api.key=AIzaSyABtkHI4NlJm-PB_j_7WhX7Ho46IcK4sn8
+gemini.api.key=${GEMINI_API_KEY:AIzaSyAmpBVl_Bp20E7ojhzrbsY2nyVH1TqYyow}
 
 # OpenAI Configuration (Backup)
 # Get your API key from: https://platform.openai.com/api-keys
@@ -48,3 +59,11 @@ vertexai.location=${VERTEX_LOCATION:us-central1}
 google.cloud.project-id=your-google-cloud-project-id
 google.cloud.speech.enabled=false
 google.cloud.speech.credentials-file=classpath:google-credentials.json
+
+# Application Email Settings
+app.name=FixPoint
+app.email.from=${EMAIL_FROM:FixPoint <noreply@fixpoint.com>}
+
+# OTP Configuration
+app.otp.expiry-minutes=10
+app.otp.max-attempts=3
