--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,43 @@
 spring.application.name=fixpoint
 
 # H2 Database C# Email Configuration for OTP Verification
+# Primary: Gmail SMTP Configuration (reads from .env file)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${EMAIL_USERNAME:tahseennabiha35@gmail.com}
-spring.mail.password=${EMAIL_PASSWORD:zsgyzrornyervilu}
+spring.mail.password=${EMAIL_PASSWORD:gfltqeedcqqrqqtb}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+
+# Alternative: Outlook SMTP (uncomment these and comment Gmail above to use)
+# spring.mail.host=smtp-mail.outlook.com
+# spring.mail.port=587
+# spring.mail.username=${EMAIL_USERNAME:your_email@outlook.com}
+# spring.mail.password=${EMAIL_PASSWORD:your_password}
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
+# spring.mail.properties.mail.smtp.ssl.trust=smtp-mail.outlook.com
+
+# Option 2: Alternative - Outlook/Hotmail (uncomment to use)
+# spring.mail.host=smtp-mail.outlook.com
+# spring.mail.port=587
+# spring.mail.username=${EMAIL_USERNAME:your_email@outlook.com}
+# spring.mail.password=${EMAIL_PASSWORD:your_password}
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Option 3: Development Mode - Use MailHog (uncomment to use)
+# spring.mail.host=localhost
+# spring.mail.port=1025
+# spring.mail.username=
+# spring.mail.password=
 
 # H2 Database Configuration for Development - File-based for persistence
 spring.datasource.url=jdbc:h2:file:./data/fixpoint;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
