Fix CI/CD test failures
- Added separate test job with in-memory H2 database
- Created application-test.properties to avoid database file conflicts
- Updated GitHub Actions workflow to properly test before deploy
- Fixed test configuration with @ActiveProfiles('test')
- Added frontend testing to CI pipeline
- Updated .env.example with email configuration

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ OPENAI_API_KEY=your_openai_api_key_here
 VERTEX_PROJECT_ID=your_vertex_project_id_here
 VERTEX_LOCATION=us-central1
 
+# Email Configuration (Gmail - Get app password from: https://myaccount.google.com/security)
+EMAIL_USERNAME=your_gmail_address@gmail.com
+EMAIL_PASSWORD=your_gmail_app_password_here
+
 # Database Configuration (Optional overrides)
 # DB_URL=jdbc:h2:file:./data/fixpoint
 # DB_USERNAME=sa
