--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,9 +118,14 @@ jobs:
         CI: false
         
     # Deploy to GitHub Pages (Frontend only)
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+      
+    - name: Upload to GitHub Pages
+      uses: actions/upload-pages-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./frontend/build
-        force_orphan: true
+        path: ./frontend/build
+        
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
