Fix GitHub Pages asset paths with correct homepage
- Added homepage field to package.json pointing to itsamisha.github.io/FixPoint
- Set PUBLIC_URL environment variable in .env and CI workflow
- Build now generates correct asset paths for GitHub Pages subdirectory
- Should resolve 404 errors for CSS, JS, and manifest files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,6 +73,7 @@ jobs:
         npm run build
       env:
         CI: false
+        PUBLIC_URL: /FixPoint
         
   build-and-deploy:
     needs: test
@@ -116,6 +117,7 @@ jobs:
         npm run build
       env:
         CI: false
+        PUBLIC_URL: /FixPoint
         
     # Deploy to GitHub Pages (Frontend only)
     - name: Setup Pages
