CRITICAL FIX: Remove context-path from production, add RootController for Railway deployment

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -11,10 +11,10 @@ spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialec
 
 # Server Configuration
 server.port=${PORT:8080}
-server.servlet.context-path=/api
+# server.servlet.context-path=/api  # Removed for Railway compatibility
 
 # CORS Configuration
-app.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,https://your-frontend-domain.com}
+app.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,https://itsamisha.github.io}
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
