--- a/railway.toml
+++ b/railway.toml
@@ -2,9 +2,6 @@
   builder = "NIXPACKS"
 
 [deploy]
-  startCommand = "java -jar target/fixpoint-0.0.1-SNAPSHOT.jar"
+  startCommand = "java -Dspring.profiles.active=production -jar target/fixpoint-0.0.1-SNAPSHOT.jar"
   restartPolicyType = "ON_FAILURE"
   restartPolicyMaxRetries = 10
-
-[environments.production.variables]
-  SPRING_PROFILES_ACTIVE = "production"
