Update all configurations with actual Render URL: https://fixpoint-ajtz.onrender.com

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialec
 server.port=${PORT:8080}
 
 # CORS Configuration
-cors.allowed.origins=${CORS_ORIGINS:http://localhost:3000,https://itsamisha.github.io}
+cors.allowed.origins=${CORS_ORIGINS:http://localhost:3000,https://itsamisha.github.io,https://fixpoint-ajtz.onrender.com}
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
