--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,7 +66,7 @@ server.port=${PORT:8080}
 
 # CORS Configuration
 # CORS Configuration
-cors.allowed.origins=http://localhost:3000,https://itsamisha.github.io,https://fixpoint-backend.onrender.com
+cors.allowed.origins=http://localhost:3000,https://itsamisha.github.io,https://fixpoint-ajtz.onrender.com
 
 # AI Configuration
 # Choose AI provider: "gemini", "openai", or "fallback"
