Fix frontend API configuration: Remove hardcoded localhost URLs, add apiConfig utility, fix image URLs and WebSocket connections

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -7,7 +7,8 @@ spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.H2Dialect}
+spring.jpa.open-in-view=false
+# Note: Removed hibernate.dialect as H2Dialect is auto-detected
 
 # Server Configuration
 server.port=${PORT:8080}
@@ -44,3 +45,4 @@ app.otp.max-attempts=3
 # Logging
 logging.level.org.springframework.web=INFO
 logging.level.com.ambiguous.fixpoint=INFO
+logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
