--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,9 +48,9 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
