--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,7 @@ services:
     name: fixpoint-backend
     env: docker
     dockerfilePath: ./Dockerfile
-    dockerContext: .
-    buildCommand: ./mvnw clean package -DskipTests
-    startCommand: java -jar target/fixpoint-0.0.1-SNAPSHOT.jar
+    dockerContext: ./backend
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: production
