Gemini-model-change-updated

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -83,6 +83,14 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- Dotenv for loading .env files -->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		
 		<!-- JWT Dependencies -->
 <dependency>
     <groupId>io.jsonwebtoken</groupId>
